--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio
 
 *.iml
+.DS_Store
 
 ## Directory-based project format:
 .idea/
